force-app/main/default/objects/SBQQ__ProductAttributeSet__c/SBQQ__ProductAttributeSet__c.object-meta.xml
<CustomObject>
    <label>Product Attribute Set</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Product Attribute Set</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>