force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__ConfiguredSKU__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <formula>CASESAFEID(SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configured SKU</label>
        <type>Text</type>
    </CustomField>