force-app/main/default/objects/SBQQ__ProductAttributeSet__c/fields/SBQQ__ProductName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductName__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Name</label>
        <type>Text</type>
    </CustomField>